#4261: Sonar warnings